--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Web task-2 Dictionary API</title>
+        <title>Web task-2 Dictionary App</title>
 
         <!-- bootstrap cdn -->
         <link rel="stylesheet"
